[tool.poetry]
name = "stapel"
version = "0.0.0"
description = "Manage IRC logs and statistics."
authors = ["supakeen <cmdr@supakeen.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["statistics", "irc"]
repository = "https://github.com/supakeen/stapel"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.6,<4"
click = "^7.0"
docutils = "^0.16"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^4.5"
black = { version = "*", allow-prereleases = true }
pytest-cov = "^2.8"
pre-commit = "^1.20"
flake8 = "^3.7"
mypy = "^0.740.0"
poetry-dynamic-versioning = "^0.3.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.black]
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
stapel = 'stapel.__main__:main'

[build-system]
requires = ["setuptools", "wheel"]
